<resources>
    <string name="app_name">MealPlanner</string>
    <string name="sign_in">Sign In</string>
    <string name="underline_sign_in"><u>&#32;Sign In</u></string>
    <string name="hi_welcome_back_you_ve_been_missed">Hi! Welcome back, you’ve been missed</string>
    <string name="email">Email</string>
    <string name="required">*Required</string>
    <string name="password">Password</string>
    <string name="forget_password"><u>Forget Password?</u></string>
    <string name="or_sign_in_with">&#32;Or sign in with&#32;</string>
    <string name="dont_have_an_account">Don’t have an account? </string>
    <string name="underline_sign_up"><u>&#32;Sign Up</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="fill_our_information_below_or_register_with_your_social_account">Fill our information below or register with your\nsocial account</string>
    <string name="name">Name</string>
    <string name="agree_with">Agree with</string>
    <string name="terms_amp_conditions"><u><![CDATA[Terms & Conditions]]></u></string>
    <string name="_32_or_sign_up_with_32">" Or sign up with "</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="new_password">New Password</string>
    <string name="your_new_password_must_be_different_from_previously_used_passwords">Your new password must be different from previously used passwords</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_new_password">Create New Password</string>
    <string name="don_t_worry_only_you_can_see_your_personal_data_no_one_else_will_be_able_to_see_it">Don’t worry, only you can see your personal data. No one else will be able to see it</string>
    <string name="complete_your_profile">Complete Your Profile</string>
    <string name="region">Region</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="today_s_inspiration">Today’s Inspiration</string>
    <string name="categories">Categories</string>
    <string name="breakfast">Breakfast</string>
    <string name="see_all">See all</string>
    <string name="recipes">Recipes</string>
    <string name="explore">Explore</string>
    <string name="favorite">Favorite</string>
    <string name="planner">Planner</string>
    <string name="profile">Profile</string>
    <string name="countries">Countries</string>
    <string name="ingredients">Ingredients</string>
    <string name="description">Description</string>
    <string name="cuisine">Cuisine</string>
    <string name="cooking_time">Cooking Time</string>
    <string name="directions">Directions</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="WEB_ID">358638561965-nuh2sukj33083gn0oa3pegagjvf49npu.apps.googleusercontent.com</string>
    <string name="log_out">Log out</string>
    <string name="including">Including:</string>
    <string name="search_by">Search by</string>
    <string name="search_by_recipe">Search by Recipe</string>
    <string name="register_for_more_features">Register for more features</string>
    <string name="sign_up_for_more_features">Sign Up for More Features</string>
    <string name="add_your_food_preferences_plan_your_meals_and_more">Add your food preferences, plan your meals and more!</string>
    <string name="save_your_first_recipe">Save Your First Recipe!</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="internet_connection_restored">Internet Connection restored</string>
</resources>