<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:paddingHorizontal="17dp"
    tools:context=".activities.SigninActivity">


    <TextView
        android:id="@+id/tv_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/create_account"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_hi_welcome_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="95dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/fill_our_information_below_or_register_with_your_social_account"
        android:textAlignment="center"
        android:textColor="@color/light_grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        app:boxStrokeColor="@color/green"
        app:boxStrokeErrorColor="@color/red"
        app:cursorColor="@color/green"
        app:helperTextTextColor="@color/light_grey"
        app:hintTextColor="@color/green"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/light_grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:boxStrokeColor="@color/green"
        app:boxStrokeErrorColor="@color/red"
        app:cursorColor="@color/green"
        app:errorIconDrawable="@drawable/error"
        app:helperTextTextColor="@color/light_grey"
        app:hintTextColor="@color/green"
        app:layout_constraintTop_toBottomOf="@id/outlinedTextField_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_signup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/light_grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:boxStrokeColor="@color/green"
        app:boxStrokeErrorColor="@color/red"
        app:cursorColor="@color/green"
        app:endIconDrawable="@drawable/hidden_ic"
        app:errorIconDrawable="@drawable/error"
        app:helperTextTextColor="@color/light_grey"
        app:hintTextColor="@color/green"
        app:layout_constraintTop_toBottomOf="@id/outlinedTextField_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_signup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/light_grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/check_box_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/light_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/outlinedTextField_password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:gravity="end"
        android:text="@string/agree_with"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/check_box_terms"
        app:layout_constraintStart_toEndOf="@id/check_box_terms"
        app:layout_constraintTop_toTopOf="@id/check_box_terms" />

    <TextView
        android:id="@+id/terms_nd_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/terms_amp_conditions"
        android:textColor="@color/green"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/check_box_terms"
        app:layout_constraintStart_toEndOf="@id/check_box_terms"
        app:layout_constraintTop_toTopOf="@id/check_box_terms" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/poppins_regular"
        android:paddingVertical="9dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/outlinedTextField_password" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_left"
        android:layout_width="100dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_or_signin_with"
        app:layout_constraintEnd_toStartOf="@id/tv_or_signin_with"
        app:layout_constraintTop_toTopOf="@id/tv_or_signin_with" />

    <TextView
        android:id="@+id/tv_or_signin_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/_32_or_sign_up_with_32"
        android:textColor="@color/light_grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_signup" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_right"
        android:layout_width="100dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_or_signin_with"
        app:layout_constraintStart_toEndOf="@id/tv_or_signin_with"
        app:layout_constraintTop_toTopOf="@id/tv_or_signin_with" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imv_google"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toStartOf="@id/imv_facebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_signup"
        app:srcCompat="@drawable/google" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imv_facebook"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imv_google"
        app:layout_constraintTop_toBottomOf="@id/button_signup"
        app:srcCompat="@drawable/facebook" />


    <TextView
        android:id="@+id/tv_dont_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/already_have_an_account"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/tv_signin_clickable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imv_google" />

    <TextView
        android:id="@+id/tv_signin_clickable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="90dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/underline_sign_in"
        android:textColor="@color/green"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_dont_have_account"
        app:layout_constraintTop_toBottomOf="@id/imv_google" />


</androidx.constraintlayout.widget.ConstraintLayout>