<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp">

    <ImageView
        android:id="@+id/imv_back_arrow"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/icon_background"
        android:padding="15dp"
        android:src="@drawable/back_ic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/new_password"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_hi_welcome_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/your_new_password_must_be_different_from_previously_used_passwords"
        android:textAlignment="center"
        android:textColor="@color/light_grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="273dp"
        app:boxStrokeColor="@color/green"
        app:boxStrokeErrorColor="@color/red"
        app:cursorColor="@color/green"
        app:endIconDrawable="@drawable/hidden_ic"
        app:errorIconDrawable="@drawable/error"
        app:helperTextTextColor="@color/light_grey"
        app:hintTextColor="@color/green"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/light_grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_confirm_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:boxStrokeColor="@color/green"
        app:boxStrokeErrorColor="@color/red"
        app:cursorColor="@color/green"
        app:endIconDrawable="@drawable/hidden_ic"
        app:errorIconDrawable="@drawable/error"
        app:helperTextTextColor="@color/light_grey"
        app:hintTextColor="@color/green"
        app:layout_constraintTop_toBottomOf="@id/til_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColorHint="@color/light_grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/poppins_regular"
        android:paddingVertical="9dp"
        android:text="@string/create_new_password"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/til_confirm_password" />


</androidx.constraintlayout.widget.ConstraintLayout>