<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="17dp"
    android:background="@color/white"
    android:layout_marginTop="20dp">


    <TextView
        android:id="@+id/tv_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <TextView-->
<!--        android:id="@+id/tv_hi_welcome_back"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="95dp"-->
<!--        android:fontFamily="@font/poppins_light"-->
<!--        android:text="@string/hi_welcome_back_you_ve_been_missed"-->
<!--        android:textColor="@color/light_grey"-->
<!--        android:textSize="14sp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        app:boxStrokeColor="@color/green"
        app:boxStrokeErrorColor="@color/red"
        app:cursorColor="@color/green"
        app:errorIconDrawable="@drawable/error"
        app:helperTextTextColor="@color/light_grey"
        app:hintTextColor="@color/green"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_signin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/light_grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:boxStrokeColor="@color/green"
        app:boxStrokeErrorColor="@color/red"
        app:cursorColor="@color/green"
        app:endIconDrawable="@drawable/hidden_ic"
        app:errorIconDrawable="@drawable/error"
        app:helperTextTextColor="@color/light_grey"
        app:hintTextColor="@color/green"
        app:layout_constraintTop_toBottomOf="@id/outlinedTextField_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_signin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/light_grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="end"
        android:text="@string/forget_password"
        android:textColor="@color/green"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/outlinedTextField_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/poppins_regular"
        android:paddingVertical="9dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/outlinedTextField_password" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_left"
        android:layout_width="100dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_or_signin_with"
        app:layout_constraintEnd_toStartOf="@id/tv_or_signin_with"
        app:layout_constraintTop_toTopOf="@id/tv_or_signin_with" />

    <TextView
        android:id="@+id/tv_or_signin_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/or_sign_in_with"
        android:textColor="@color/light_grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_signin" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_right"
        android:layout_width="100dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_or_signin_with"
        app:layout_constraintStart_toEndOf="@id/tv_or_signin_with"
        app:layout_constraintTop_toTopOf="@id/tv_or_signin_with" />

    <ImageView
        android:id="@+id/imv_google"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_signin"
        app:srcCompat="@drawable/google" />

    <TextView
        android:id="@+id/tv_dont_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/dont_have_an_account"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/tv_signup_clickable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imv_google" />

    <TextView
        android:id="@+id/tv_signup_clickable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="90dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/underline_sign_up"
        android:textColor="@color/green"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_dont_have_account"
        app:layout_constraintTop_toBottomOf="@id/imv_google" />


</androidx.constraintlayout.widget.ConstraintLayout>