<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp">

    <ImageButton
        android:id="@+id/imv_back_arrow"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/icon_background"
        android:padding="12dp"
        android:scaleType="centerCrop"
        android:src="@drawable/back_ic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_complete_your_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/complete_your_profile"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_dont_worry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/don_t_worry_only_you_can_see_your_personal_data_no_one_else_will_be_able_to_see_it"
        android:textAlignment="center"
        android:textColor="@color/light_grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imv_user_ic"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="250dp"
        android:background="@drawable/circle_background"
        android:padding="40dp"
        android:src="@drawable/user_ic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imv_pen_ic"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="330dp"
        android:layout_marginEnd="110dp"
        android:background="@drawable/circle_background"
        android:backgroundTint="@color/green"
        android:padding="8dp"
        android:src="@drawable/pen_ic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:boxStrokeColor="@color/green"
        app:cursorColor="@color/green"
        app:layout_constraintTop_toBottomOf="@id/imv_user_ic">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name"
            android:inputType="text"
            android:textColorHint="@color/light_grey" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_region"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:boxStrokeColor="@color/green"
        app:cursorColor="@color/green"
        app:layout_constraintTop_toBottomOf="@id/til_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_signin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/region"
            android:inputType="textAutoComplete"
            android:textColorHint="@color/light_grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_complete_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/poppins_regular"
        android:paddingVertical="9dp"
        android:text="@string/complete_profile"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/til_region" />


</androidx.constraintlayout.widget.ConstraintLayout>