<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:scaleType="centerCrop"
        android:src="@drawable/start_image"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:scaleType="centerCrop"
        android:src="@drawable/gradient"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:layout_marginTop="32dp"
        android:text="Skip"
        android:textSize="14dp"
        app:cornerRadius="30dp"
        android:fontFamily="@font/poppins_medium"
        android:backgroundTint="#70000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".46" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_signupWithEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#000000"
        android:fontFamily="@font/poppins_regular"
        android:paddingVertical="12dp"
        android:text="@string/sign_up_with_email"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/guideline" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_continueWithGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/google_ic"
        android:fontFamily="@font/poppins_regular"
        android:paddingVertical="12dp"
        android:text="@string/continue_with_google"
        android:textColor="#000000"
        android:textSize="20sp"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/button_signupWithEmail" />

    <TextView
        android:id="@+id/tv_dontHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/already_have_an_account"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_SigninClickable"
        app:layout_constraintTop_toBottomOf="@id/button_continueWithGoogle" />


    <TextView
        android:id="@+id/tv_SigninClickable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="90dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/underline_sign_in"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_dontHaveAccount"
        app:layout_constraintTop_toBottomOf="@id/button_continueWithGoogle" />

</androidx.constraintlayout.widget.ConstraintLayout>